--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,13 +41,14 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url('app_about')}}">
-                            About us
+                        <a class="nav-link" href="{{url('post.create')}}">
+                            Upload
                         </a>
                     </li>
+                     
                     <li class="nav-item">
                         <a class="nav-link" href="{{url('create_form')}}">
-                            Contact
+                            Login
                         </a>
                     </li>
                 </ul>
